@@ -1,5 +1,12 @@
 2002-03-24  Martin Mares  <mj@ucw.cz>
 
+	* lspci.c (show_pcix_bridge): Added PCI-X capability display.
+	Contributed by Jeff Garzik <jgarzik@mandrakesoft.com>.
+
+	* lib/header.h: Added PCI-X stuff. Again by Jeff.
+
+	* Makefile (CFLAGS): -Werror is gone.
+
 	* lspci.c (format_agp_rate): Fixed AGP rate reporting.
 
 	* lib/filter.c (pci_filter_parse_slot): Allow bus 0xff, slot 0x1f and
